logs/dag_id=database/run_id=manual__2024-06-24T11:54:42.402631+00:00/task_id=create_table/attempt=1.log
[2024-06-24T11:54:42.974+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-06-24T11:54:42.987+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: database.create_table manual__2024-06-24T11:54:42.402631+00:00 [queued]>
[2024-06-24T11:54:42.992+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: database.create_table manual__2024-06-24T11:54:42.402631+00:00 [queued]>
[2024-06-24T11:54:42.993+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 1
[2024-06-24T11:54:43.000+0000] {taskinstance.py:2330} INFO - Executing <Task(PostgresOperator): create_table> on 2024-06-24 11:54:42.402631+00:00
[2024-06-24T11:54:43.004+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=347) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-06-24T11:54:43.005+0000] {standard_task_runner.py:63} INFO - Started process 348 to run task
[2024-06-24T11:54:43.005+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'database', 'create_table', 'manual__2024-06-24T11:54:42.402631+00:00', '--job-id', '430', '--raw', '--subdir', 'DAGS_FOLDER/databse.py', '--cfg-path', '/tmp/tmp0zur9wjx']
[2024-06-24T11:54:43.005+0000] {standard_task_runner.py:91} INFO - Job 430: Subtask create_table
[2024-06-24T11:54:43.029+0000] {task_command.py:426} INFO - Running <TaskInstance: database.create_table manual__2024-06-24T11:54:42.402631+00:00 [running]> on host e3e60e62d12c
[2024-06-24T11:54:43.077+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='database' AIRFLOW_CTX_TASK_ID='create_table' AIRFLOW_CTX_EXECUTION_DATE='2024-06-24T11:54:42.402631+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-06-24T11:54:42.402631+00:00'
[2024-06-24T11:54:43.077+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-06-24T11:54:43.097+0000] {sql.py:276} INFO - Executing: create table if not exixts test(id it);
[2024-06-24T11:54:43.102+0000] {base.py:84} INFO - Using connection ID 'postgres' for task execution.
[2024-06-24T11:54:43.108+0000] {base.py:84} INFO - Using connection ID 'postgres' for task execution.
[2024-06-24T11:54:43.110+0000] {sql.py:487} INFO - Running statement: create table if not exixts test(id it);, parameters: None
[2024-06-24T11:54:43.110+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-06-24T11:54:43.110+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 435, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 492, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "exixts"
LINE 1: create table if not exixts test(id it);
                            ^

[2024-06-24T11:54:43.116+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=database, task_id=create_table, run_id=manual__2024-06-24T11:54:42.402631+00:00, execution_date=20240624T115442, start_date=20240624T115442, end_date=20240624T115443
[2024-06-24T11:54:43.123+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 430 for task create_table (syntax error at or near "exixts"
LINE 1: create table if not exixts test(id it);
                            ^
; 348)
[2024-06-24T11:54:43.137+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-06-24T11:54:43.144+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/models/baseoperator.py:1297: AirflowProviderDeprecationWarning: Call to deprecated class PostgresOperator. (Please use `***.providers.common.sql.operators.sql.SQLExecuteQueryOperator`.Also, you can provide `hook_params={'schema': <database>}`.)
  result = cls.__new__(cls)

[2024-06-24T11:54:43.158+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-06-24T11:54:43.162+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
